--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -15,6 +15,7 @@ margin: 0 auto;}
   padding-top: 1rem;
   height: 30rem;}
 
+
 .header {background-color: cadetblue;
   padding: 1rem 2rem 1rem 2rem;
   display: flex;
@@ -35,15 +36,19 @@ margin: 0 auto;}
 
 .nav span {margin-left: 2rem;}
 
-.banner.container {
+.banner .container {
   position: relative;
-  top: 10rem;}
+  top: 10rem;
+display: flex;
+justify-content: flex-end;}
 
-.bannertext {
+.bannertext {display: inline-block;
 background-color: white;
 padding: 1.5rem 5rem 1.5rem 5rem;
 font-weight: bold;
 font-size: 2rem;
+position: relative;
+left: 2rem;
 }
 
 
@@ -53,10 +58,13 @@ font-size: 2rem;
 justify-content: center;
 padding: 3rem 0;}
 
-.iconbox {height: 8rem; display: flex;
+.iconbox {height: 8rem; width: auto; display: flex;
 flex-direction: column; align-items: center;
 justify-content: space-between;
+
 }
+
+
 
 .iconbox#paper {margin-right: 6rem;}
 .iconbox#ruler {margin-right: 6rem;}
@@ -66,9 +74,14 @@ justify-content: space-between;
 
 #ruler img {max-width: 5rem;}
 
-.about {display: flex;}
+#truck img {max-width: 5rem;}
 
-.aboutbox {width: 35%; margin: 0 2.5%;
+
+
+.about .container {display: flex;
+justify-content: center;}
+
+.aboutbox {width: 35%;
 }
 
 .abouttext { color: white;
@@ -81,10 +94,14 @@ background-color: cadetblue;
   margin: 0 0 1rem 0;
 }
 
-.footer {background-color: azure;
+#philosophy {margin-right: 2.5%;}
+#appointments {margin-left: 2.5%;}
+
+.footer .container {background-color: azure;
 display: flex;
 align-items: center;
 margin-top: 5rem;
-padding: 4rem;}
+}
 
-.footer .logo {color: black;}
+.footer .logo {color: black;
+margin: 4rem 0 4rem 4rem;}
